--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2024.12.14
 charset-normalizer==3.4.0
 idna==3.10
 pandas==1.5.3
+numpy==1.26.4
 pyTelegramBotAPI==4.25.0
 python-dotenv==1.0.1
 requests==2.32.3
