--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,5 @@ pygame==2.1.3.dev8  # Versión compatible con Python 3.10+
 psutil==5.9.5
 pytz==2024.1
 gtts==2.4.0
+setuptools==65.5.0
+wheel==0.41.0
