--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-certifi==2024.12.14
-charset-normalizer==3.4.0
-idna==3.10
-pyTelegramBotAPI==4.25.0
-python-dotenv==1.0.1
-requests==2.32.3
-urllib3==2.2.3
+certifi==2023.7.22
+charset-normalizer==3.3.2
+idna==3.6
+pyTelegramBotAPI==4.15.3
+python-dotenv==1.0.0
+requests==2.31.0
+urllib3==1.26.18
 pandas==1.5.3
-geopy==2.4.0
+geopy==2.3.0
 numpy==1.23.5
-playsound==1.2.2
-pygame==2.1.3.dev8
-psutil==5.9.5
-pytz==2024.1
-gtts==2.4.0
-setuptools==65.5.0
-wheel==0.41.0
+playsound==1.3.0
+pygame==2.1.2
+psutil==5.9.0
+pytz==2023.3
+gtts==2.3.2
+setuptools==58.2.0
+wheel==0.38.4
