--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,4 @@
-pip install --no-cache-dir --force-reinstall -r requirements.txt
+RUN python -m venv /opt/venv && \
+    . /opt/venv/bin/activate && \
+    pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
