--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,22 @@
-setuptools==58.2.0
-pyTelegramBotAPI==4.25.0
-pandas==1.5.3
+setuptools
+pyTelegramBotAPI
+pandas
+tk
+threading
+webbrowser
+datetime
+geopy
+textwrap
+numpy
+time
+requests
+json
+os
+shutil
+glob
+gtts
+playsound
+pygame
+platform
+psutil
+pytz
