--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,11 @@
 setuptools
 pyTelegramBotAPI
 pandas
-tk
-threading
-webbrowser
-datetime
 geopy
-textwrap
 numpy
-time
 requests
-json
-os
-shutil
-glob
 gtts
-playsound
+playsound==1.2.2
 pygame
-platform
 psutil
 pytz
